stub for update in film.jsp

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,7 +46,11 @@
 
 	</form>
 
-
+	<h2>Delete Film By Id</h2>
+	<form action="deleteFilm.do" method="get">
+		<input type="number" name="filmId">
+		<button>Delete Film</button>
+	</form>
 </body>
 
 </html>
