add basic search

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,6 +30,11 @@
 		<input type="number" name="filmId">
 		<button>Delete Film</button>
 	</form>
+	
+	<h2>Search for Films by Keyword</h2>
+	<form action="searchFilms.do" method="get">
+		<input type = "text" name="searchTerm">
+	</form>
 </body>
 
 </html>
