--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,7 +23,11 @@
 	
 
 	<h2>Edit Film by Id</h2>
-	<a href="editFilmForm.do"><button>Edit Film</button></a>
+		<form action="editFilmForm.do" method="get">
+		<input type="number" name="filmId">
+		<button>Edit Film</button>
+	</form>
+	
 
 	<h2>Delete Film By Id</h2>
 	<form action="deleteFilm.do" method="get">
